Read "net.sf.jasperreports.extension.registry.factory.simple.font.families"; file to url refactoring